Starting point for app.js

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-8"></div>
+            <div id="product-list" class="col-md-8"></div>
             <!--Bootstrap usually occupies 12 columns, thats
             why we divided the app in 2: 4 columns for the
             form which's going to add products and the other
@@ -62,5 +62,6 @@
         </div>
     </div>
     
+    <script src="./app.js"></script>
 </body>
 </html>
