--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </div>
 
                         <div class="form-group">
-                            <textarea id="features" cols="30" rows="10" placeholder="Product Featuers"
+                            <textarea id="description" cols="30" rows="10" placeholder="Product Description"
                             class="form-control"></textarea>
                         </div>
                         <input type="submit" value="Save" class="btn btn-primary btn-block">
@@ -62,6 +62,6 @@
         </div>
     </div>
     
-    <script src="./app.js"></script>
+    <script src="./main.js" type="module"></script>
 </body>
 </html>
